--- a/partials/config.hbs
+++ b/partials/config.hbs
@@ -9,8 +9,8 @@ var disqus_shortname = 'example'; // required: replace example with your forum s
 var sidebar_left = true; // Set true or flase for positioning sidebar on left
 
 //	3. Google+ badge settings
-var badge_type = 'page'; // person / page / community ----- three type of google badge
-var google_plus_url = 'https://plus.google.com/111813546240107028721';
+var badge_type = 'community'; // person / page / community ----- three type of google badge
+var google_plus_url = 'https://plus.google.com/communities/106724509785464667119';
 
 //	4. Facebook Page Setting
 var facebook_page_url = 'https://www.facebook.com/gbjsolution';
