--- a/partials/widget-twitter.hbs
+++ b/partials/widget-twitter.hbs
@@ -3,7 +3,7 @@
 	<h4 class="title">{{t "Twitter"}}</h4>
 	<div class="content twitter">
 		<!-- start code from publish.twitter.com -->
-		Add your twitter code here
+		<a class="twitter-timeline" data-chrome="noheader nofooter noscrollbar" data-tweet-limit="3" data-link-color="#19CF86" href="https://twitter.com/HackersSlackers?ref_src=twsrc%5Etfw">Tweets by HackersSlackers</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		<!-- end code from publish.twitter.com -->
 	</div>
 </div>
