--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -4,7 +4,7 @@
 	{{> widget-newsletter}}
 	{{> widget-recentpost}}
 	{{> widget-tagcloud}}
-	{{> widget-facebook}}
+	{{!-- {{> widget-facebook}} --}}
 	{{> widget-twitter}}
 	{{> widget-google-plus}}
 	{{> widget-text}}
