--- a/partials/widget-social.hbs
+++ b/partials/widget-social.hbs
@@ -9,18 +9,18 @@
 			<li><a href="#"><i class="fa fa-twitter"></i></a></li>
 			<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
 			<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-			<li><a href="#"><i class="fa fa-skype"></i></a></li>
+			<!--<li><a href="#"><i class="fa fa-skype"></i></a></li>
 			<li><a href="#"><i class="fa  fa-pinterest"></i></a></li>
 			<li><a href="#"><i class="fa fa-youtube"></i></a></li>
 			<li><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
 			<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-			<li><a href="#"><i class="fa fa-flickr"></i></a></li>
+			<li><a href="#"><i class="fa fa-flickr"></i></a></li>-->
 			<li><a href="#"><i class="fa fa-tumblr"></i></a></li>
 			<li><a href="#"><i class="fa fa-github"></i></a></li>
 			<li><a href="#"><i class="fa fa-instagram"></i></a></li>
 			<li><a href="#"><i class="fa fa-stack-overflow"></i></a></li>
-			<li><a href="#"><i class="fa fa-stack-exchange"></i></a></li>
-			<li><a href="#"><i class="fa fa-xing"></i></a></li>
+			<!--<li><a href="#"><i class="fa fa-stack-exchange"></i></a></li>
+			<li><a href="#"><i class="fa fa-xing"></i></a></li>-->
 			<li><a href="#"><i class="fa fa-envelope"></i></a></li>
 			<li><a href="{{@blog.url}}/rss/"><i class="fa fa-rss"></i></a></li>
 			<!-- end social links -->
