--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -10,8 +10,8 @@
 		<h2 class="post-title"><a href="{{url}}">{{{title}}}</a></h2>
 		<div class="post-meta">
 			<span class="author">{{t "By"}} {{authors separator=", "}}</span> &bull;
-			<span class="date">{{date format="MMMM DD, YYYY"}}</span> &bull;
-			<span class="comment-count"><a href="{{url}}#disqus_thread">{{t "0 Comments"}}</a></span>
+			<span class="date">{{date format="MMMM DD, YYYY"}}</span><!-- &bull;
+			<span class="comment-count"><a href="{{url}}#disqus_thread">{{t "0 Comments"}}</a></span>-->
 		</div>
 	</div>
 	{{#if feature_image}}
