--- a/partials/widget-text.hbs
+++ b/partials/widget-text.hbs
@@ -1,8 +1,7 @@
 <!-- start widget -->
 <div class="widget">
-	<h4 class="title">Text Widget</h4>
+	<h4 class="title">Welcome</h4>
 	<div class="content">
-		Here you can add any text or html snippet. All widgets are reorderable. Also if you want to remove any widget from sidebar or footer then that is very simple.
-	</div>
+Hackers and Slackers is a community of of people who code dope shit as a means to an end. While we may not all be developers per se, we like to blow stuff up and make an impact. </div>
 </div>
 <!-- end widget -->
