--- a/post.hbs
+++ b/post.hbs
@@ -13,8 +13,8 @@
 						<h1 class="post-title h2">{{{title}}}</h1>
 						<div class="post-meta">
 							<span class="author">{{authors}}</span> &bull;
-							<span class="date">{{date format="MMMM DD, YYYY"}}</span> &bull;
-							<span class="comment-count"><a href="{{url}}#disqus_thread">0 Comments</a></span>
+							<span class="date">{{date format="MMMM DD, YYYY"}}</span> <!--&bull;
+							<span class="comment-count"><a href="{{url}}#disqus_thread">0 Comments</a></span>-->
 						</div>
 					</div>
 					{{#if feature_image}}
