--- a/partials/widget-newsletter.hbs
+++ b/partials/widget-newsletter.hbs
@@ -2,7 +2,7 @@
 <div class="widget">
 	<h4 class="title">{{t "Newsletter"}}</h4>
 	<div class="content newsletter">
-		<p>{{t "Subscribe to our newsletter"}}</p>
+		<p>{{t "Opt in to email spam updates"}}</p>
 		<div id="mc_embed_signup">
 			<form action="#" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
 				<div class="input-group">
