--- a/post.hbs
+++ b/post.hbs
@@ -10,7 +10,7 @@
 				{{#post}}
 				<article class="{{post_class}}">
 					<div class="post-head">
-						<h1 class="post-title h2">{{{title}}}</h1>
+						<h1 class="post-title">{{{title}}}</h1>
 						<div class="post-meta">
 							<span class="author">{{authors}}</span> &bull;
 							<span class="date">{{date format="MMMM DD, YYYY"}}</span> <!--&bull;
