--- a/default.hbs
+++ b/default.hbs
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<!-- stylesheets -->
 	{{! Styles'n'Scripts }}
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400%7CRoboto+Slab' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:600,700|Roboto:300,400,500" rel="stylesheet">
 	<link rel="stylesheet" href="{{asset "css/bootstrap.min.css"}}">
 	<link rel="stylesheet" href="{{asset "css/font-awesome.min.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}">
@@ -21,6 +21,7 @@
 	{{> config}}
 	{{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
+
 </head>
 <body class="{{body_class}}">
 	{{! insert header partial}}
