--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -12,7 +12,7 @@
 ====================================================*/
 body,
 html {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   color: #505050;
   line-height: 1.75em;
@@ -22,6 +22,10 @@ html {
 body {
   width: 100%;
   overflow-x: hidden;
+}
+article {
+  font-size: 16px;
+  line-height: 1.6em;
 }
 .h1,
 .h2,
@@ -35,20 +39,23 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Lato', serif;
-  font-weight: 700;
+  font-family: 'Montserrat', serif;
+  font-weight: 600;
   color: #303030;
 }
 .h1,
 h1 {
   font-size: 3em;
-  font-weight: 700;
+  font-weight: 800;
 }
 .h2,
 h2 {
   font-size: 2.5em;
   font-weight: 400;
-  font-family: 'Lato';
+  font-family: 'Montserrat';
+}
+.home-template h2 {
+  font-weight: 800 !important;
 }
 .h3,
 h3 {
@@ -141,7 +148,7 @@ textarea:focus {
 }
 blockquote {
   border-left: 4px solid #00ada7;
-  font-family: 'Lato', serif;
+  font-family: 'Montserrat', serif;
   font-style: italic;
 }
 pre {
@@ -169,7 +176,7 @@ pre {
 }
 .main-header .branding {
   font-size: 3.5em;
-  font-family: 'Lato', serif;
+  font-family: 'Montserrat', serif;
   color: #303030;
 }
 .main-header .branding:hover {
@@ -213,7 +220,7 @@ pre {
   line-height: 4em;
   display: block;
   padding: 0 21px;
-  font-family: 'Lato', serif;
+  font-family: 'Montserrat', serif;
 }
 .main-navigation .menu li:hover > a {
   color: #00ada7;
@@ -345,45 +352,40 @@ pre {
   max-width: 100%;
   margin-bottom: 14px;
 }
-.post .post-permalink {
+.post > .post-permalink {
   text-align: right;
 }
-.post .post-permalink a {
+.post > .post-permalink .btn {
   font-size: 18px;
   font-weight: 100;
   text-transform: uppercase;
   padding: 10px 20px;
 }
-.post .post-footer {
-  margin-top: 30px;
-  border-top: 1px solid #ebebeb;
-  padding: 21px 0 0;
-}
-.post .post-footer .tag-list {
+.post .tag-list {
   color: #959595;
-  font-style: italic;
-  line-height: 28px;
+  margin-top: 10px;
 }
-.post .post-footer .tag-list a {
+.post .tag-list a {
   color: #959595;
   margin-left: 7px;
+  font-weight: 100;
 }
-.post .post-footer .tag-list a:hover {
+.post .tag-list a:hover {
   color: #00ada7;
 }
-.post .post-footer .share .share-icons {
+.post .share .share-icons {
   padding: 0;
   margin: 0;
 }
-.post .post-footer .share .share-icons li {
+.post .share .share-icons li {
   list-style: none;
   display: inline-block;
 }
-.post .post-footer .share .share-icons li a {
+.post .share .share-icons li a {
   color: #959595;
   text-align: center;
 }
-.post .post-footer .share .share-icons li a i {
+.post .share .share-icons li a i {
   width: 28px;
   height: 28px;
   line-height: 28px;
@@ -398,7 +400,7 @@ pre {
   transition: all 0.2s ease;
   font-size: 12px;
 }
-.post .post-footer .share .share-icons li a:hover i {
+.post .share .share-icons li a:hover i {
   color: #FFFFFF;
   background: #00ada7;
   border: 1px solid #00ada7;
@@ -574,7 +576,7 @@ pre {
 }
 .widget .recent-post .recent-single-post .post-title {
   color: #505050;
-  font-family: 'Lato', serif;
+  font-family: 'Montserrat', serif;
   -webkit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
   -ms-transition: all 0.2s ease;
